--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
     <a href="https://github.com/gandallab/C4A-network" target="_blank">
       <img src="pics/C4-abstract.png" alt="image" style="width: 100%; height: auto;">&nbsp;
     </a>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Eb9O9XRK6yU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p> </p>
     <img src="pics/sawtelle.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/zrkIOqJ0-3I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/baby.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/mini2.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiNHL96nX_8-3I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p> </p>
     <img src="pics/cali.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/cous.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
@@ -37,10 +41,14 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/5V2sduyz-dk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/vegas.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Hb7QblCdmNM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p> </p>
     <img src="pics/high.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Xy3VvueX9ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/dad.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/BGpmIANN5Lg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p> </p>
     <img src="pics/mini3.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/FRWXdPSoUT0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
@@ -74,13 +82,9 @@
   </body>
 </html>
 
-<!-- {% include youtubePlayer.html id="PtvlmOsNV4E" %}
-{% include youtubePlayer.html id="Eb9O9XRK6yU" %}
+<!--
 {% include soundcloudPlayer.html id="698908933" %}
 {% include soundcloudPlayer.html id="784836013" %}
-{% include youtubePlayer.html id="HiNHL96nX_8" %}
 {% include youtubePlayer.html id="vYwXMnC03I4" %}
 {% include youtubePlayer.html id="2R2ll9SRCeo" %}
-{% include youtubePlayer.html id="Hb7QblCdmNM" %}
-{% include youtubePlayer.html id="BGpmIANN5Lg" %}
 -->
