--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p> </p>
     <img src="pics/baby.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/mini2.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiNHL96nX_8-3I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiNHL96nX_8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/cali.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
