--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/zrkIOqJ0-3I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/baby.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">
+      <img src="pics/mrvc.svg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    </a>
     <img src="pics/mini2.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiNHL96nX_8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
