--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
     <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
+      body {
+        margin: 0;
+        font-family: Arial, Geneva, Helvetica, sans-serif;
+      }
       div.content { 
-        max-width: 600px; margin: auto; font-family: Arial, Geneva, Helvetica, sans-serif;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      header {
+        width: 100%;
+        background: white;
+        position: fixed;
+      }
+      header h1 {
+        font-size: 35px;
+        margin: 21px 0;
+      }
+      header + * {
+        margin-top: 77px;
       }
     </style>
   </head>
   <body>
     <div class="content">
-    <h1 style="font-size:35px">Minsoo Kim</h1>
+    <header>
+      <h1>Minsoo Kim</h1>
+    </header>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/PtvlmOsNV4E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/mini.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
