--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <p> </p>
     <img src="pics/cali.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/lzsiToDItbI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p> </p>
     <img src="pics/cous.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/EhAZtQT4qX8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
