jelly bean quote

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/EhAZtQT4qX8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/kobe.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    if somebody's not obsessed with what they do, we don't speak the same language
+    <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/5V2sduyz-dk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <img src="pics/vegas.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
