--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     <p> </p>
     <img src="pics/baby.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">
-      <img src="pics/mrvc.svg" alt="image" style="width: 100%; height: auto;">&nbsp;
+      <img src="pics/mrvc.svg" alt="image" style="width: 100%; height: auto;">
     </a>
     <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">MultiResponseVarianceComponentModels.jl</a>
+    <p> </p>
     <img src="pics/mini2.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiNHL96nX_8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     yes of course, I remember, how could I forget how you feel?
@@ -102,9 +103,10 @@
     I said I love you baby and I gave your love away
     <p> </p>
     <a href="https://github.com/mmkim1210/GeneticsMakie.jl" target="_blank">
-      <img src="pics/logo2.svg" alt="image" style="width: 100%; height: auto;">&nbsp;
+      <img src="pics/logo2.svg" alt="image" style="width: 100%; height: auto;">
     </a>
     <a href="https://minsookim.info/GeneticsMakie.jl/dev/" target="_blank">GeneticsMakie.jl</a>
+    <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/mmsasEoupO4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     you look behind the curtain, and a lot of people's relationships, they are just not as peachy as it seems
     <p> </p>
