--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     <img src="pics/cous.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/EhAZtQT4qX8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
-    <img src="pics/kobe.jpeg" alt="image" style="width: 100%; height: auto;">
+    <a href="https://www.espn.com/espn/feature/story/_/id/15188880/kobe-bryant-most-iconic-memorable-photographs" target="_blank">
+      <img src="pics/kobe.jpeg" alt="image" style="width: 100%; height: auto;">
+    </a>
     if somebody's not obsessed with what they do, we don't speak the same language
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/5V2sduyz-dk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
