--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     you know you were my first time, a new feel
     <p> </p>
     <img src="pics/cali.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
-    <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
+    <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">
     ⓂⒾⓃⓈⓄⓄ ⓀⒾⓂ
     <br>
-    M̤̼̂͌Ï̑ͭ͢N̬̔S͖̊O̘͎ͨ̃ͤ͡O͔͗̽̚ K̖̞͌̆I̹ͬ̈M̬͇͞
+    M̞̦̬͠ị̢͚ͪ͋n̪ͥͤ̕s̳ͩ̽ȍ̙̦̓̎o̧̭̜ͦ͞ K͑̋ï̤̰͔̰͘m̨ͥ̌
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/lzsiToDItbI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     I believe that marriage isn't between a man and woman, but between love and love
