--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     <p> </p>
     <img src="pics/vegas.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Hb7QblCdmNM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    I can hear your tears when they drop over the phone
+    <br>
+    get mad at myself, can't leave you alone
+    <br>
+    gossip being messy, that ain't what we doing
     <p> </p>
     <img src="pics/high.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Xy3VvueX9ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -144,7 +149,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/IYvEhgYy35I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <footer>
-      <p><small> Last updated Feb 2024 </small></p>
+      <p><small> Last updated Mar 2024 </small></p>
     </footer>
     </div>
   </body>
