--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <p> </p>
     <img src="pics/cali.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <img src="pics/scrub.jpeg" alt="image" style="width: 100%; height: auto;">
-    ⓂⒾⓃⓈⓄⓄ ⓀⒾⓂ
+    ⓂⒾⓃⓈⓄⓄ ⓀⒾⓂ •◡•
     <br>
-    M̞̦̬͠ị̢͚ͪ͋n̪ͥͤ̕s̳ͩ̽ȍ̙̦̓̎o̧̭̜ͦ͞ K͑̋ï̤̰͔̰͘m̨ͥ̌
+    M̞̦̬͠ị̢͚ͪ͋n̪ͥͤ̕s̳ͩ̽ȍ̙̦̓̎o̧̭̜ͦ͞ K͑̋ï̤̰͔̰͘m̨ͥ̌ ◡̈
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/lzsiToDItbI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     I believe that marriage isn't between a man and woman, but between love and love
@@ -134,7 +134,7 @@
     if you truly love cinema with all your heart and with enough passion, you can't help but make a good movie
     <p> </p>
     <img src="pics/garcon.jpg" alt="image" style="width: 100%; height: auto;">
-    comme des <a href="https://en.wikipedia.org/wiki/Gar%C3%A7on_%C3%A0_la_pipe" target="_blank">garcon a la pipe</a>
+    comme des <a href="https://en.wikipedia.org/wiki/Gar%C3%A7on_%C3%A0_la_pipe" target="_blank">garçon a la pipe</a>
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/UNghSuMBraw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     sometimes you'll miss it, and the sound will make you cry
