--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     if you truly love cinema with all your heart and with enough passion, you can't help but make a good movie
     <p> </p>
     <img src="pics/garcon.jpg" alt="image" style="width: 100%; height: auto;">
-    comme des <a href="https://en.wikipedia.org/wiki/Gar%C3%A7on_%C3%A0_la_pipe" target="_blank">garçon a la pipe</a>
+    comme des <a href="https://en.wikipedia.org/wiki/Gar%C3%A7on_%C3%A0_la_pipe" target="_blank">garçon à la pipe</a>
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/UNghSuMBraw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     sometimes you'll miss it, and the sound will make you cry
