--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">
       <img src="pics/mrvc.svg" alt="image" style="width: 100%; height: auto;">
     </a>
-    <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">MRVCModels.jl</a>
+    <a name="MRVCModels" href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">MRVCModels.jl</a>
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Eb9O9XRK6yU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     I can't believe you came to my show
