--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     I don't know you and I can't put no threats in the air
     <p> </p>
     <img src="pics/mini.jpeg" alt="image" style="width: 100%; height: auto;">&nbsp;
-    <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">
+    <a name="MRVCModels" href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">
       <img src="pics/mrvc.svg" alt="image" style="width: 100%; height: auto;">
     </a>
-    <a name="MRVCModels" href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">MRVCModels.jl</a>
+    <a href="https://hua-zhou.github.io/MultiResponseVarianceComponentModels.jl/dev/" target="_blank">MRVCModels.jl</a>
     <p> </p>
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/Eb9O9XRK6yU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     I can't believe you came to my show
@@ -113,7 +113,7 @@
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/L1Fclc2T9vQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     I said I love you baby and I gave your love away
     <p> </p>
-    <a href="https://github.com/mmkim1210/GeneticsMakie.jl" target="_blank">
+    <a name="GeneticsMakie" href="https://github.com/mmkim1210/GeneticsMakie.jl" target="_blank">
       <img src="pics/logo2.svg" alt="image" style="width: 100%; height: auto;">
     </a>
     <a href="https://minsookim.info/GeneticsMakie.jl/dev/" target="_blank">GeneticsMakie.jl</a>
