--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
     <br>
     if you truly love cinema with all your heart and with enough passion, you can't help but make a good movie
     <p> </p>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/IYvEhgYy35I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <a href="https://github.com/mmkim1210/Arrakis.jl/blob/73528311fb28b4e550ad0f23dd2f6f1a7b49a8a1/assets/quotes.txt#L491" target="_blank">Feyd-Rautha</a>
+    <p> </p>
     <img src="pics/garcon.jpg" alt="image" style="width: 100%; height: auto;">
     comme des <a href="https://en.wikipedia.org/wiki/Gar%C3%A7on_%C3%A0_la_pipe" target="_blank">garçon à la pipe</a>
     <p> </p>
