--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@
     <br>
     sometimes you make me wanna face it
     <p> </p>
+    <img src="pics/md-phd.jpg" alt="image" style="width: 100%; height: auto;">&nbsp;
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/IYvEhgYy35I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p> </p>
     <footer>
-      <p><small> Last updated Jul 2024 </small></p>
+      <p><small> Last updated Sep 2024 </small></p>
     </footer>
     </div>
   </body>
